# font-render-tester

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakelists.txt  README.md  colors.hpp  context.cpp  context.hpp  draw_glyph.cpp  draw_glyph.hpp  draw_rect.cpp  draw_rect.hpp  font.cpp  font.hpp  gl_util.cpp  gl_util.hpp  io_util.hpp  main.cpp  main_scene.cpp  main_scene.hpp  scene.cpp  scene.hpp  test_scene.cpp  test_scene.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp  vcpkg.json
.github/workflows/: build.yml  main.yml  non-main.yml
shaders/: draw_glyph.frag  draw_glyph.vert  draw_rect.frag  draw_rect.vert
src/: colors.hpp  debug_settings.hpp  draw_glyph.cpp  draw_glyph.hpp  font.cpp  font.hpp  io_util.hpp  main.cpp  main_scene.cpp  main_scene.hpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp  version.hpp
